# cloud

./: .coderabbit.yaml  .cursorrules  .env.backup  .env.example  .env.local.backup  .env.local.example  .env.local.temp  .gitignore  .incremental-merge-state  .pr-resolver-state.json  .vercelignore  AFFILIATE_IMPLEMENTATION.md  AFFILIATE_SETUP.md  AGENTS.md  AI_COMPANION_RESEARCH_DOC.md  ANALYTICS_API_DOCUMENTATION.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  ANALYTICS_QUICK_REFERENCE.md  APPS_FEATURE.md  AUTH_MIGRATION_NOTES.md  AVATAR_UPDATES.md  BILLING_SECURITY_IMPROVEMENTS.md  BUG_FIX_OG_IMAGES_SEO.md  CAPACITOR_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  COMPLETE_TEST_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTAINERS_MIGRATION.md  CRITICAL_FIXES_NEEDED.md  DEAD_CODE_REMOVAL_SUMMARY.md  DEPLOYMENT_CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_HEADSCALE_PLAN.md  DOCKER_PROVISIONING_SUMMARY.md  ELIZAOS_HYPE_STRATEGY.md  ELIZA_CLOUD_PRIVATE_FRONTEND_ANALYSIS.md  FINAL_ANALYSIS.md  FINAL_OG_SEO_FIX_SUMMARY.md  (+78 more)
.local-packages/: elizaos-plugin-mcp-1.7.0-local.1769832904.tgz
.prr/: lessons.md
10/: route.ts
50/: Next.js  route.ts
api/: MIGRATION_NOTES.md  dws-worker.ts  package.json  tsconfig.json  wrangler.toml
app/: global-error.tsx  globals.css  layout.tsx  opengraph-image.alt.txt  page.tsx  robots.ts  sitemap.ts
config/: README.md  (+5 more)
src-tauri/: .gitignore  Cargo.toml  env.mobile.example  tauri.conf.json
src-tauri/distribution/whatsnew/: en-US.txt
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: iap.rs  lib.rs  main.rs
(+4433 files in other folders)
