[package]
name = "eliza-cloud"
version = "0.1.0"
description = "Eliza Cloud Mobile App - Native wrapper for elizacloud.ai"
authors = ["elizaOS Team"]
license = "MIT"
repository = "https://github.com/elizaos/eliza-cloud-v2"
edition = "2021"
rust-version = "1.70"

[lib]
name = "eliza_cloud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-deep-link = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
